--- a/TODO
+++ b/TODO
@@ -7,3 +7,5 @@
 * Update README for 3.0
 * Document config.rb
 * Add option to quit after sending pending notifications.
+* Warn if number of workers is more than db pool size?
+* statsd probes?
