Command-line config overrides the initializer.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 # 3.0
 
+* Command-line options should override rapns.rb.
 * Detect only 2.0 usage? Direct to upgrade doc in the Wiki?
 * Document config.rb
 
