--- a/TODO
+++ b/TODO
@@ -6,3 +6,4 @@
 * Add option to quit after sending pending notifications.
 * Warn if number of workers is more than db pool size?
 * statsd probes?
+* Bugsnag
