--- a/TODO
+++ b/TODO
@@ -1,9 +1,6 @@
-# 3.0
-
-* Document config.rb
-
 # 3.1
 * Add option to quit after sending pending notifications.
 * Warn if number of workers is more than db pool size?
 * statsd probes?
 * Bugsnag
+* Generator should merge rapns.rb
