Do not exit() when embedded.

--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 # 3.0
 
 * Document config.rb
+* Do not exit() from ensure_upgraded when embedded.
 
 # 3.1
 * Add option to quit after sending pending notifications.
